# kuzu

./: CMakeLists.txt  README.md  history.txt
.github/workflows/: ci-workflow.yml  linux-precompiled-bin-workflow.yml  mac-precompiled-bin-workflow.yml
dataset/parquet_temp_shortest-path-testsShortestPathTest.BfsParquet1692663614359/: copy.cypher
dataset/parquet_temp_shortest-path-testsShortestPathTest.BfsParquet1692669718366/: copy.cypher
dataset/parquet_temp_shortest-path-testsShortestPathTest.BfsParquet1696732023617/: copy.cypher
dataset/parquet_temp_shortest-path-testsShortestPathTest.BfsParquet1696732090585/: copy.cypher
dataset/parquet_temp_shortest-path-testsShortestPathTest.BfsParquet1697474637405/: copy.cypher
dataset/parquet_temp_shortest-path-testsShortestPathTest.BfsParquet1699911082024/: copy.cypher
dataset/parquet_temp_shortest-path-testsShortestPathTest.BfsParquet1699912277941/: copy.cypher
dataset/parquet_temp_shortest-path-testsShortestPathTest.BfsParquet1699912293251/: copy.cypher
dataset/parquet_temp_shortest-path-testsShortestPathTest.BfsParquet1699912321602/: copy.cypher
dataset/parquet_temp_shortest-path-testsShortestPathTest.BfsParquet1699912334719/: copy.cypher
dataset/parquet_temp_shortest-path-testsShortestPathTest.BfsParquet1699912364316/: copy.cypher
dataset/parquet_temp_shortest-path-testsShortestPathTest.BfsParquet1699912384796/: copy.cypher
dataset/parquet_temp_shortest-path-testsShortestPathTest.BfsParquet1699912404093/: copy.cypher
dataset/parquet_temp_shortest-path-testsShortestPathTest.BfsParquet1699912427384/: copy.cypher
dataset/parquet_temp_shortest-path-testsShortestPathTest.BfsParquet1699912478193/: copy.cypher
dataset/parquet_temp_shortest-path-testsShortestPathTest.BfsParquet1699916728127/: copy.cypher
dataset/parquet_temp_shortest-path-testsShortestPathTest.BfsParquet1699918015821/: copy.cypher
dataset/parquet_temp_shortest-path-testsShortestPathTest.BfsParquet1699918721634/: copy.cypher
dataset/parquet_temp_shortest-path-testsShortestPathTest.BfsParquet1699918750354/: copy.cypher
src/: CMakeLists.txt
src/common/serializer/: CMakeLists.txt
src/function/gds/: 1T1S_parallel_msbfs_length.cpp  1T1S_parallel_msbfs_path.cpp  1T1S_parallel_shortest_path.cpp  1T1S_parallel_sp_length.cpp  1T1S_parallel_sp_mega_length.cpp  1T1S_parallel_sp_path.cpp  1T1S_parallel_varlen_msbfs_path.cpp  1T1S_parallel_varlen_path.cpp  CMakeLists.txt  asp_ife_morsel.cpp  gds.cpp  ife_morsel.cpp  msbfs_ife_morsel.cpp  msbfs_path_ife_morsel.cpp  msbfs_varlen_path_ife_morsel.cpp  nT1S_parallel_msbfs_length.cpp  nT1S_parallel_msbfs_path.cpp  nT1S_parallel_shortest_path.cpp  nT1S_parallel_sp_length.cpp  nT1S_parallel_sp_mega_length.cpp  nT1S_parallel_sp_path.cpp  nT1S_parallel_varlen_msbfs_path.cpp  nT1S_parallel_varlen_path.cpp  nTkS_parallel_msbfs_length.cpp  nTkS_parallel_msbfs_path.cpp  nTkS_parallel_shortest_path.cpp  nTkS_parallel_sp_length.cpp  nTkS_parallel_sp_mega_length.cpp  nTkS_parallel_sp_path.cpp  nTkS_parallel_varlen_msbfs_path.cpp  nTkS_parallel_varlen_path.cpp  parallel_asp_length.cpp  parallel_msbfs_length.cpp  parallel_msbfs_path.cpp  parallel_sp_length.cpp  parallel_sp_mega_length.cpp  parallel_sp_mega_path.cpp  parallel_sp_path.cpp  parallel_utils.cpp  parallel_varlen_length.cpp  (+7 more)
src/processor/operator/recursive_extend/: CMakeLists.txt  all_shortest_path_state.cpp  bfs_scheduler.cpp  bfs_state.cpp  bfs_state_temp.cpp  morsel_dispatcher.cpp  ms_bfs_morsel.cpp  recursive_join.cpp  shortest_path_recursive_join.cpp  shortest_path_state.cpp  variable_length_path_state.cpp  variable_length_state.cpp  weighted_shortest_path_state.cpp
test/: CMakeLists.txt
(+439 files in other folders)
